shifted nav bar and reservation container overlayed on top photo, fixed position and highlight bug of navbar, positioning of topbar components

--- a/client/src/css/Nav.css
+++ b/client/src/css/Nav.css
@@ -12,7 +12,7 @@
     border-color: #dadada;
     border: 0.5px solid;
     font-weight: 350;
-    z-index: 3;
+    z-index: 5;
     border-radius: 4px;
 }
 .arrowForwardLogo{
